--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-demo-2",
+  "name": "angular-demo",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,11 +10,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "angular": "^1.5.0",
+    "angular-mocks": "^1.5.0",
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
+    "chai": "^3.5.0",
+    "karma": "^0.13.19",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-mocha": "^0.2.1",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.4.5",
     "raw-loader": "^0.5.1",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "angular": "^1.5.0",
+    "angular-messages": "^1.5.0",
+    "angular-ui-router": "^0.2.18"
   }
 }
