--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "NODE_ENV=test karma start",
-    "webpack": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "build": "NODE_ENV=production node node_modules/.bin/webpack"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "karma-mocha": "^0.2.1",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
+    "ng-annotate-loader": "^0.1.0",
     "raw-loader": "^0.5.1",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
